# CGOL-In-Color

./: CMakeLists.txt  ReadMe.md
Headers/: GOLConfig.h.in  Life.hpp
Source/: Life.cpp  main.cpp
